# openclaw

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4bd60ab61176_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  case.py  chat_message.py  document.py  user.py
backend/app/routers/: auth.py  cases.py  chat.py  documents.py  users.py
backend/app/schemas/: auth.py  case.py  chat.py  document.py  user.py
backend/app/services/: auth_service.py  case_service.py  claude_service.py  document_service.py
backend/app/utils/: exceptions.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  cases.ts  chat.ts  client.ts  documents.ts  users.ts
frontend/src/components/: ChatMessage.tsx  ChatWindow.tsx  DocumentPanel.tsx  Layout.tsx  NewCaseModal.tsx  ProtectedRoute.tsx  Sidebar.tsx  Spinner.tsx
frontend/src/pages/: Admin.tsx  CaseDetail.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/store/: auth.ts
